--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+            
+            <link rel="stylesheet" href="{{ asset("css/style.css")}}">
+        {% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
