--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,7 @@ main{
     width: 50%;
     margin-left: 20px;
     float: left;
+    font-family: 'Dancing Script', cursive;
 }
 
 #cabecera img{
@@ -35,6 +36,10 @@ section #buscador{
     margin-bottom: 25px;
     border-radius: 20px;
     border: 1px solid;
+}
+
+section h1{
+    font-family: 'Dancing Script', cursive;
 }
 
 
