--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -1,9 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Client{% endblock %}
+
     {% block stylesheets %}
         {{ parent() }}
     {% endblock %}
+
+
+    
 {% block body %}
 
 <main>
@@ -44,8 +48,10 @@
                 </li>
             </ul>
 
-
-
+            {% for client in clients %}
+                clientes: {{ client.name }}
+            {% endfor %}
+             {# clientes: {{ clients.name }} #}
         </div>
 
     </section>
