--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -99,8 +99,8 @@
                                         </div>
                                     </div>
                                     <div class="form-actions">
-                                        <a class="btn btn-default" href="{{ relative_path('/login') }}">Back to login</a>
-                                        <button type="submit" id="register-submit-btn" class="btn btn-success btn-lg float-right">Registrarse</button>
+                                        <a class="btn btn-secundary" href="{{ relative_path('/login') }}">Back to login</a>
+                                        <button type="submit" id="register-submit-btn" class="btn btn-primary float-right">Registrarse</button>
                                     </div>
                                     {{ form_rest(registration_form) }}
                                 {{ form_end(registration_form) }}
