--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,105 +1,129 @@
-main{
-    padding: 0px;
-    margin:0px;
-    width: 100%;
-    height: 100%;
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
+:root {
+  --main-color: #FF7B20;
+  --secundary-color: rgb(39, 0, 63);
+  --grey-color: #CCCCCC;
 }
 
-#cabecera{
-    border:1px solid;
-    width: 100%;
-    height: 70px;
+/* Global CSS */
+
+body {
+    font-family: 'Montserrat', sans-serif;
 }
 
-#cabecera h1{
-    width: 50%;
-    margin-left: 20px;
-    float: left;
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    margin-bottom: 0;
+    font-weight: 400;
+    line-height: 1;
 }
 
-#cabecera img{
-    width: 4%;
-    float: right;
-    margin-right: 20px;
-    margin-top: 10px;
+ul {
+    padding-left: 0;
+    margin-bottom: 0;
 }
 
-section{
-    width: 79%;
-    float: right;
-    height: 100%;
+ul li {
+    list-style: none;
 }
 
-section #buscador{
-    width: 30%;
-    margin-bottom: 25px;
-    border-radius: 20px;
-    border: 1px solid;
+:focus {
+    outline: 0 !important;
 }
 
-
-section img{
-    width: 3%;
-    float: right;
-    margin-right: 10px;
-}
-section p{
-    height: 25px;
+p {
+    margin-bottom: 0;
+    font-weight: 300;
+    line-height: 1.8;
+    color: #666666;
 }
 
-section #titulo{
-    width: 70%;
-    margin-left: 10%;
-}
-
-section #añadir{
-   margin-top: 40px;
-}
-
-section button{
-    border-radius: 10px;
-}
-
-fieldset{
-    background: #fff;
-    border:1px solid #333;
-    border-radius: 5px;
-}
-
-
-
-
-section #empresas{
-    border: 1px solid;
-    border-radius: 20px;
-    width: 70%;
-    margin-left: 10%;
-}
-
-
-aside{
-    width: 19%;
-    float: left;
-    height: 100px;
-    text-align: center;
-    height: 80%;
-}
-
-aside h2{
-    width: 100%;
-    margin-top: 0.1px;
-    margin-bottom: 0.1px;
-    border: 1px solid;
-    height: 7%;
-    color: black;
-    padding-top: 10px;
-}
-
-aside a{
+a {
     text-decoration: none;
-    margin-top: 10px;
+    -webkit-transition: .4s;
+    transition: .4s;
 }
 
+a:hover, a:focus {
+    color: var(--main-color);
+    text-decoration: none;
+}
 
+img {
+    max-width: 100%;
+}
 
+.ptb-80 {
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
 
+.bg-f6f6f6 {
+    background: #f6f6f6;
+}
+
+.d-table {
+    width: 100%;
+    height: 100%;
+}
+
+.d-table-cell {
+    vertical-align: middle;
+}
+
+/* Btn Btn-Primary */
+.btn {
+    padding: 9px 25px;
+    font-size: 16px;
+    border-radius: 30px;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: var(--main-color);
+    border-color: var(--main-color);
+}
+
+.btn-secundary {
+    color: #fff;
+    background-color: var(--grey-color);
+    border-color: var(--grey-color);
+}
+
+.btn-primary:hover, .btn-primary:focus, .btn-primary.disabled:hover, .btn-primary.disabled:focus {
+    color: var(--main-color);
+    background-color: #fff;
+    border-color: var(--main-color);
+}
+
+.btn-secundary:hover, .btn-secundary:focus, .btn-secundary.disabled:hover, .btn-secundary.disabled:focus {
+    color: var(--grey-color);
+    background-color: #fff;
+    border-color: var(--grey-color);
+}
+  
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active {
+    color: #fff;
+    background-color: var(--main-color);
+    border-color: var(--main-color);
+}
+  
+.btn-primary:not(:disabled):not(.disabled).active:focus, .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-secundary:not(:disabled):not(.disabled).active:focus, .btn-secundary:not(:disabled):not(.disabled):active:focus {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+  
+.btn-primary.focus, .btn-primary:focus, .btn-secundary.focus, .btn-secundary:focus {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+  
+.btn-primary.disabled, .btn-primary:disabled {
+    color: #fff;
+    background-color: var(--main-color);
+    border-color: var(--main-color);
+    opacity: 1;
+}
