--- a/templates/company/index.html.twig
+++ b/templates/company/index.html.twig
@@ -3,10 +3,13 @@
 {% block title %}Hello CompanyController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% block stylesheets %}
+
+    {{ parent() }}
+
+    <link rel="stylesheet" href="{{ asset("css/main.css") }}">
+
+{% endblock %}
 
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
