--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -9,15 +9,16 @@
             ul{
                 list-style-type:none;
             }
+
         </style>
 {% endblock %}
 {% block body %}
 <div class="todos-Productos">
 
     <input type="search" name="buscador">
-    <a href=""><button>Buscar Producto</button></a>
+    <a href="/"><button>Buscar Producto</button></a>
 
-    <h1> Mis Productos</h1>
+    <h1 id="misProductos"> Mis Productos</h1>
     <ul>
         {% for producto in productos %}
             <li>{{producto.name}} -- > <button>Eliminar Producto </button><button> Editar Producto</button></li>
