--- a/templates/company/index.html.twig
+++ b/templates/company/index.html.twig
@@ -1,23 +1,61 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CompanyController!{% endblock %}
+{% block title %}My Companies{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset("css/main.css") }}">
+{% endblock %}
 
 {% block body %}
-{% block stylesheets %}
 
-    {{ parent() }}
+    <main>
 
-    <link rel="stylesheet" href="{{ asset("css/main.css") }}">
+        <header>
 
-{% endblock %}
+            <div id="cabecera">
+                <img src="img/logo1.png" alt="Logo" id="logo">
+                <h1>Factura Fácil</h1>
+                <a href="#"><img src="img/avatar.png" alt="Avatar"/></a>
+            </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+        </header>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/factura_facil/src/Controller/CompanyController.php'|file_link(0) }}">src/Controller/CompanyController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/factura_facil/templates/company/index.html.twig'|file_link(0) }}">templates/company/index.html.twig</a></code></li>
-    </ul>
+        <section>
+            <div id="titulo">
+                {#ME HE QUEDADO AQUI CON EL IF ELSE#}
+                <h1>Mis Empresas :  {{ numberCompanies }} de {{ nMaxComanies }}
+                    {% if numberCompanies <   nMaxComanies %}
+                    <a href="{{ path('addNewCompany') }}"><img src="img/añadir.png" alt="Añadir"
+                                                                           id="añadirCompany" /></a>
+                    {% endif %}
+                </h1>
+            </div>
+
+
+            <div id="clientesCompany">
+
+                {% for company in companies %}
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="{{ path('showCompany', {id:company.id}) }}" id="nanmeCompany">{{ company.name }}</a>
+                                <a href="{{ path('editCompany', {id:company.id}) }}"><img
+                                            src="img/EditarEmpleados.png" alt="" /></a>
+                                <a href="{{ path('deleteCompany', {id:company.id}) }}"><img src="img/borrar.png" alt="Borrar" /></a>
+
+                            </p>
+                        </li>
+                    </ul>
+
+                    <hr>
+                {% endfor %}
+
 </div>
+
+</section>
+
+    </main>
+
 {% endblock %}
+
