--- a/templates/profile/profile.html.twig
+++ b/templates/profile/profile.html.twig
@@ -5,6 +5,7 @@
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset("css/main.css") }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.12/dist/css/bootstrap-select.min.css">
 {% endblock %}
 
 {% block body %}
@@ -17,7 +18,6 @@
         <div id="titulo">
             <h1>Mi perfil</h1>
         </div>
-
     </section>
 
     <aside id="menu">
@@ -27,7 +27,6 @@
         <a href="#"><h2>Mi Perfil</h2></a>
     </aside>
 
-    
 </main>
 
 {% endblock %}
