--- a/templates/client/client.html.twig
+++ b/templates/client/client.html.twig
@@ -4,32 +4,8 @@
 
     {% block stylesheets %}
         {{ parent() }}
-
-        <style>
-    tr{
-        border: 1px solid;
-    }
-
-    td{
-        border:1px solid;
-        text-align: center;
-    }
-
-    th{
-        border: 1px solid;
-    }
-
-    table{
-        border: 1px solid;
-        width: 30%;
-        margin-top: 10px;
-        margin-left:10px;
-    }
-
-    input{
-        margin-left:10px;
-    }
-</style>
+        <script type="text/javascript" src="{{ asset("js/ClientInfo.js") }}"></script>
+        <link rel="stylesheet" href="{{ asset("css/main.css") }}">
 
     {% endblock %}
 
@@ -37,45 +13,47 @@
     
 {% block body %}
 
+<div id="info">
+    <table>
+        <tr>
+            <th>Name</th>
+            <td>{{ client.name }}</td>
+        </tr>
+        <tr>
+            <th>Fiscal Address</th>
+            <td>{{ client.fiscaladress }}</td>
+        </tr>
+        <tr>
+            <th>NIF</th>
+            <td>{{ client.nif }}</td>
+        </tr>
+        <tr>
+            <th>Email</th>
+            <td>{{ client.email }}</td>
+        </tr>
+        <tr>
+            <th>Phone</th>
+            <td>{{ client.phone }}</td>
+        </tr>
+        <tr>
+            <th>Web</th>
+            <td>{{ client.web }}</td>
+        </tr>
+        <tr>
+            <th>Boss Name</th>
+            <td>{{ client.bossname }}</td>
+        </tr>
+        <tr>
+            <th>Boss Phone</th>
+            <td>{{ client.bossphone }}</td>
+        </tr>
+    </table>
 
-<table>
-    <tr>
-        <th>Name</th>
-        <td>{{ client.name }}</td>
-    </tr>
-    <tr>
-        <th>Fiscal Address</th>
-        <td>{{ client.fiscaladress }}</td>
-    </tr>
-    <tr>
-        <th>NIF</th>
-        <td>{{ client.nif }}</td>
-    </tr>
-    <tr>
-        <th>Email</th>
-        <td>{{ client.email }}</td>
-    </tr>
-    <tr>
-        <th>Phone</th>
-        <td>{{ client.phone }}</td>
-    </tr>
-    <tr>
-        <th>Web</th>
-        <td>{{ client.web }}</td>
-    </tr>
-    <tr>
-        <th>Boss Name</th>
-        <td>{{ client.bossname }}</td>
-    </tr>
-    <tr>
-        <th>Boss Phone</th>
-        <td>{{ client.bossphone }}</td>
-    </tr>
-</table>
+    <br><br>
 
-<br><br>
-
-<!--Botón para volver a la última página visitada-->
-<input type="button" onclick="history.back()" name="Back" value="Back">
-
+    <!--Botón para volver a la última página visitada-->
+    {# <input type="button" onclick="history.back()" name="Back" value="Back"> #}
+    <input type="button" value="Back" id ="boton" onClick="location.reload();"/>
+    
+</div>
 {% endblock %}
