--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -5,6 +5,7 @@
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset("css/main.css") }}">
+    <script type="text/javascript" src="{{ asset("js/ClientInfo.js") }}"></script>
 {% endblock %}
 
 {% block body %}
@@ -14,42 +15,53 @@
     <header>
 
         <div id="cabecera">
-            <img src="img/logo1.png" alt="Logo" id="logo">
+            <img src="{{asset("img/logo1.png")}}" alt="Logo" id="logo">
             <h1>Factura Fácil</h1>
-                <a href="#"><img src="img/avatar.png" alt="Avatar"/></a>
+                <a href="#"><img src="{{asset("img/avatar.png")}}" alt="Avatar"/></a>
         </div>
 
     </header>
 
-    <section>
+    <div id="showAllClients"></div> 
+    <section id="sect">
         <div id="titulo">
-            <h1>Mis Clientes <a href="{{ path('addNewClient') }}"><img src="img/añadir.png" alt="Añadir" 
+        
+            <h1>Mis Clientes <a href="{{ 'addNewClient' }}"><img src="{{asset("img/añadir.png")}}" alt="Añadir" 
                                      id="añadir" /></a></h1>
+        
             <form action="{{ path('search')}}" method="POST" id="search">
                     <input type="search" id="buscador" placeholder=" Buscar...">
                     <button type="submit">Buscar</button>        
             </form>              
-         </div>
+        </div>
 
 
         <div id="clientes">
-            {% for client in clients %}
+            {% for clients in client %}
+            
                 <ul>
                     <li>
                         <p>
-                            <a href="{{ path('show', {id:client.id}) }}">{{ client.name }}</a>
-                            <a href="{{ path('edit', {id: client.id}) }}"><img 
-                                    src="img/EditarEmpleados.png" alt="" /></a>
-                            <a href="#"><img src="img/borrar.png" alt="Borrar" /></a>
+                            <div id="oneClient">
+                                <a href="{{ path('show', {id:clients.id}) }}">{{ clients.name }}</a>
+                            </div>
+                            <div id="iconos">
+                                <a href="{{ path('edit', {id: clients.id}) }}"><img 
+                                        src="{{asset("img/EditarEmpleados.png")}}" alt="" /></a>
+                                <a href=" {{ path('delete',{id: clients.id}) }} ">
+                                        <img src="{{asset("img/borrar.png")}}" alt="Borrar" id="delete"/></a>
+                            </div>
                         </p>
                     </li>
                 </ul>
-
+            
                 <hr>
             {% endfor %}
         </div>
-
+            
     </section>
+
+    
 
     <aside id="menu">
         <a href="#"><h2>Mi Empresa</h2></a>
