--- a/templates/form/addnewclient.html.twig
+++ b/templates/form/addnewclient.html.twig
@@ -20,5 +20,14 @@
         {{ form_row(registrationForm.web) }}
         {{ form_row(registrationForm.bossName) }}
         {{ form_row(registrationForm.bossPhone) }}
+        {# {{ form_row(registrationForm.company) }} #}
+        {# <select 'required'>
+            <option>------</option>
+        {% if companies is defined %}
+            {% for company in companies  %}
+                <option>{{ company.name }}</option>
+            {% endfor %}
+        {% endif %}
+        </select> #}
     {{ form_end(registrationForm) }}
 {% endblock %}
