--- a/templates/company/index.html.twig
+++ b/templates/company/index.html.twig
@@ -39,7 +39,7 @@
                     <ul>
                         <li>
                             <p>
-                                <a href="{{ path('showCompany', {id:company.id}) }}" id="nanmeCompany">{{ company.name }}</a>
+                                <a href="{{ path('showCompany', {id:company.id}) }}" id="nameCompany">{{ company.name }}</a>
                                 <a href="{{ path('editCompany', {id:company.id}) }}"><img
                                             src="img/EditarEmpleados.png" alt="" /></a>
                                 <a href="{{ path('deleteCompany', {id:company.id}) }}"><img src="img/borrar.png" alt="Borrar" /></a>
