--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,8 @@
             <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
             <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="{{ asset("css/style.css")}}">
+            <link rel="stylesheet" href="{{ asset("css/main2.css")}}">
             
         {% endblock %}
 
@@ -16,7 +18,6 @@
             <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-            <script type="text/javascript" src="{{ asset("js/aside a.js") }}"></script>
             <script type="text/javascript" src="{{ asset("js/ClientInfo.js") }}"></script>
             
         {% endblock %}
