--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,9 +1,18 @@
 
 <header>
-    <div id="cabecera">
-        <img src="{{ asset("img/logo1.png") }}" alt="Logo" id="logo">
-        <h1>Factura Fácil</h1>
-        <a href="">Mis empresas</a>
-        <a href=""><img src="{{ asset("img/avatar.png") }}" alt="Avatar"/></a>
-    </div>
+    <nav class="navbar-facturas">
+        <div class="nav-start">
+            <img src="{{ asset("img/logo1.png") }}" alt="Logo" id="logo">
+            <a class="navbar-brand">Factura Fácil</a>
+        </div>
+
+        <div class="nav-end">
+            <div class="nav-items">
+                <ul>
+                    <li><a href="">Mis empresas</a></li>
+                    <li><a href=""><img src="{{ asset("img/avatar.png") }}" alt="Avatar"/></a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </header>
