--- a/templates/company/editCompany.html.twig
+++ b/templates/company/editCompany.html.twig
@@ -6,5 +6,48 @@
     <div class="card-header">
         <h3 class="mb-0">Editar Empresa</h3>
     </div>
-    
+
+
+
+    {#DESDE AQUI #}
+
+    <div class="card-body">
+        {{ form_start(registration_form, {'method': 'post', 'attr': {'class': 'form'}}) }}
+        <div class="form-group">
+            {{ form_widget(registration_form.email, { 'attr': {'class': 'form-control form-control-lg rounded-0', 'placeholder':'Email'} }) }}
+            {% for errorItem in registration_form.email.vars.errors %}
+                <span class="help-inline">{{ errorItem.message }}</span>
+            {% endfor %}
+        </div>
+        <div class="form-group">
+            {{ form_widget(registration_form.name, { 'attr': {'class': 'form-control form-control-lg rounded-0', 'placeholder':'Nombre'} }) }}
+            {% for errorItem in registration_form.name.vars.errors %}
+                <span class="help-inline">{{ errorItem.message }}</span>
+            {% endfor %}
+        </div>
+        <div class="form-group">
+            {{ form_widget(registration_form.plainPassword, { 'attr': {'class': 'form-control form-control-lg rounded-0', 'placeholder':'Password'} }) }}
+            {% for errorItem in registration_form.plainPassword.vars.errors %}
+                <span class="help-inline">{{ errorItem.message }}</span>
+            {% endfor %}
+        </div>
+        <div class="form-group">
+            <div class="form-check">
+                {{ form_widget(registration_form.agreeTerms, { 'attr': {'class': 'form-check-input'} }) }}
+                <label for="registration_form_agreeTerms" class="form-check-label required">Agree terms</label>
+                {% for errorItem in registration_form.agreeTerms.vars.errors %}
+                    <span class="help-inline">{{ errorItem.message }}</span>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="form-actions">
+            <a class="btn btn-secundary" href="{{ relative_path('/login') }}">Back to login</a>
+            <button type="submit" id="register-submit-btn" class="btn btn-primary float-right">Registrarse</button>
+        </div>
+        {{ form_rest(registration_form) }}
+        {{ form_end(registration_form) }}
+    </div>
+
+
+    {#HASTA AQUI#}
 {% endblock %}
