--- a/templates/profile/profile.html.twig
+++ b/templates/profile/profile.html.twig
@@ -14,18 +14,16 @@
 
     {% include 'header.html.twig' %}
 
-    <section>
-        <div id="titulo">
-            <h1>Mi perfil</h1>
-        </div>
-    </section>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Mi perfil</h1>
+            </div>
+            <div class="col-md-12">
 
-    <aside id="menu">
-        <a href="#"><h2>Productos</h2></a>
-        <a href="#"><h2>Facturas</h2></a>
-        <a href="#"><h2>Clientes</h2></a>
-        <a href="#"><h2>Mi Perfil</h2></a>
-    </aside>
+            </div>
+        </div>
+    </div>
 
 </main>
 
