--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -10,7 +10,7 @@
             <div class="nav-items">
                 <ul>
                     <li><a href="{{ path('companies') }}">Mis empresas</a></li>
-                    <li><a><img src="{{ asset("img/avatar.png") }}" alt="Avatar"/></a></li>
+                    <li id="menu-user-toggle"><a><img src="{{ asset("img/avatar.png") }}" alt="Avatar"/></a></li>
                 </ul>
             </div>
         </div>
