--- a/public/css/main2.css
+++ b/public/css/main2.css
@@ -88,7 +88,7 @@
     background: var(--secundary-color);
     width: 175px;
     box-shadow: 0 5px 15px -3px rgba(0,0,0,.23);
-    visibility: hidden;
+    display: none;
 }
 
 .nav-acount {
