--- a/templates/menu-user.html.twig
+++ b/templates/menu-user.html.twig
@@ -2,6 +2,12 @@
 <aside class="nav-acount">
     <ul>
         <li>
+            <a href="{{ path('companies') }}">
+                <div class="nav-acount-img"><i class="fas fa-building"></i></div>
+                <span>Mis Empresas</span>
+            </a>
+        </li>
+        <li>
             <a href="{{ path('profile') }}">
                 <div class="nav-acount-img"><i class="fas fa-user-circle"></i></div>
                 <span>Mi Cuenta</span>
