--- a/templates/profile/profile.html.twig
+++ b/templates/profile/profile.html.twig
@@ -11,13 +11,13 @@
     {% include 'header.html.twig' %}
     {% include 'menu-user.html.twig' %}
 
-    <div class="container content-container">
+    <div class="container main-container">
         <div class="row">
             <div class="col-md-12">
                 <h1>Mi perfil</h1>
             </div>
             <div class="col-md-12">
-                
+
             </div>
         </div>
     </div>
