--- a/public/css/main2.css
+++ b/public/css/main2.css
@@ -151,13 +151,68 @@
 
 
 /*
-* Contenido
+* Panel
 */
 
-body {
-    background-color: var(--background-color);
+.main-container {
+    margin-top: 100px;
 }
 
-.content-container {
-    margin-top: 100px;
+.main-container > .row {
+    margin-left: 65px;
+}
+
+.panel {
+    background: #fff;
+    padding: 6px 24px;
+    border-radius: 5px;
+}
+
+.panel-heading {
+    width: 100%;
+    height: auto;
+    display: flex;
+    margin-bottom: 16px;
+}
+
+.panel-heading > h3 {
+    font-weight: 600;
+    font-size: 24px;
+    width: 100%;
+}
+
+.panel-heading > a {
+    flex: 1;
+    color: #fff;
+}
+
+.panel-heading > a > button {
+    background: #53e69d;
+    border: 1px solid #53e69d;
+    border-radius: 3px;
+    padding: 10px 16px;
+    font-size: 20px;
+    font-weight: 100;
+}
+
+.watch, .edit, .delete {
+    border-radius: 3px;
+    padding: 10px 16px;
+    color: #fff;
+    font-size: 18px;
+}
+
+.watch{
+    background: #707cd2;
+    border: 1px solid #707cd2;
+}
+
+.edit{
+    background: #ffc36d;
+    border: 1px solid #ffc36d;
+}
+
+.delete{
+    background: #ff7676;
+    border: 1px solid #ff7676;
 }
