--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
+    background-color: var(--background-color);
 }
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
@@ -128,4 +129,13 @@ img {
     background-color: var(--main-color);
     border-color: var(--main-color);
     opacity: 1;
+}
+
+
+/* fa icons */
+
+.fa, .fas {
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    color: #fff;
 }
