--- a/templates/menu-user.html.twig
+++ b/templates/menu-user.html.twig
@@ -10,7 +10,7 @@
         <li>
             <a href="{{ path('profile') }}">
                 <div class="nav-acount-img"><i class="fas fa-user-circle"></i></div>
-                <span>Mi Cuenta</span>
+                <span>Mi Perfil</span>
             </a>
         </li>
         <li>
