--- a/templates/profile/profile.html.twig
+++ b/templates/profile/profile.html.twig
@@ -13,11 +13,12 @@
 
     <div class="container main-container">
         <div class="row">
-            <div class="col-md-12">
-                <h1>Mi perfil</h1>
-            </div>
-            <div class="col-md-12">
-
+            <div class="panel panel-profile">
+                <div class="panel-heading">
+                    <h2>Mi perfil</h2>
+                </div>
+                <div class="panel-form">
+                </div>
             </div>
         </div>
     </div>
