--- a/public/css/main2.css
+++ b/public/css/main2.css
@@ -83,7 +83,6 @@
     position: fixed;
     z-index: 49;
     top: 78px;
-    /* right: -220px; */
     right: 0px;
     background: var(--secundary-color);
     width: 175px;
@@ -151,21 +150,88 @@
 
 
 /*
+* Menu Company
+*/
+
+@media(min-width: 768px) {
+    .menu-company {
+        max-width: 285px;
+        height: calc(100vh - 78px);
+    }
+}
+
+.menu-company {
+    border-top: 2.5px solid var(--main-color);
+    background: var(--secundary-color);
+    width: 100%;
+    z-index: 49;
+    margin-top: 78px;
+    padding: 4px 0px;
+    box-shadow: 0.1rem 0.2rem 0.7rem 0 rgba(0,0,0,.25);
+}
+
+.menu-company h4 {
+    margin-top: 32px;
+    padding: 0 24px;
+    color: #fff;
+}
+
+.menu-company-elements {
+    margin-top: 16px;
+    padding-left: 0px;
+}
+
+.menu-company-elements > li {
+    width: 100%;
+    height: 55px;
+    display: flex;
+    align-items: center;
+    padding: 0 24px;
+}
+
+.menu-company-elements > li:hover {
+    background-color: #1a1a1a;
+}
+
+.menu-company-elements > li.active {
+    border-left: solid .4rem var(--main-color);
+    background-color: #1a1a1a;
+}
+
+.menu-company-elements > li.active a, .menu-company-elements > li.active .fas {
+    color: var(--main-color) !important;
+}
+
+.menu-company-elements > li > a{
+    border-top: 1px solid #272831;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.menu-company-elements > li > a > span {
+    width: 100%;
+}
+
+
+/*
 * Panel
 */
 
 .main-container {
-    margin-top: 100px;
-}
-
-.main-container > .row {
-    margin-left: 65px;
+    margin-top: 120px;
 }
 
 .panel {
     background: #fff;
-    padding: 6px 24px;
+    padding: 8px 24px;
     border-radius: 5px;
+    width: 100%;
+    min-width: 806px;
 }
 
 .panel-heading {
@@ -173,6 +239,7 @@
     height: auto;
     display: flex;
     margin-bottom: 16px;
+    padding: 10px 15px;
 }
 
 .panel-heading > h3 {
@@ -195,14 +262,18 @@
     font-weight: 100;
 }
 
-.watch, .edit, .delete {
+.panel-search{
+    padding: 12px 8px;
+}
+
+.show, .edit, .delete {
     border-radius: 3px;
     padding: 10px 16px;
     color: #fff;
     font-size: 18px;
 }
 
-.watch{
+.show{
     background: #707cd2;
     border: 1px solid #707cd2;
 }
