--- a/templates/company/editCompany.html.twig
+++ b/templates/company/editCompany.html.twig
@@ -1,53 +1,64 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Editar Empresa{% endblock %}
 
 {% block body %}
-    <div class="card-header">
-        <h3 class="mb-0">Editar Empresa</h3>
-    </div>
+    {% block javascripts %}
+        <script src="{{ asset('js/companyScript.js') }}" type="text/javascript"></script>
+    {% endblock %}
 
+
+
+
+
+    <div class="card-header">
+        <h3 class="mb-0">Editar Empresa : {{ nameCompany }}</h3>
+    </div>
+    <div id="revision">
+        <ul>
+
+        </ul>
+    </div>
 
 
     {#DESDE AQUI #}
 
     <div class="card-body">
-        {{ form_start(registration_form, {'method': 'post', 'attr': {'class': 'form'}}) }}
-        <div class="form-group">
-            {{ form_widget(registration_form.email, { 'attr': {'class': 'form-control form-control-lg rounded-0', 'placeholder':'Email'} }) }}
-            {% for errorItem in registration_form.email.vars.errors %}
+        {{ form_start(editCompany_form, {'method': 'post', 'attr': {'class': 'form', 'onsubmit':'return validarformulario(this)'}}) }}
+       <div class="form-group">
+           <label for="nameCompany">Nombre </label>
+           {{ form_widget(editCompany_form.name, { 'attr': {'class': 'form-control form-control-lg rounded-0 ', 'placeholder':'Company Name', 'name':'nombre de la empresa', 'id':'nameCompany',  'value': nameCompany} }) }}
+            {# {% for errorItem in editCompany_form.email.vars.errors %}
                 <span class="help-inline">{{ errorItem.message }}</span>
-            {% endfor %}
+            {% endfor %} #}
         </div>
         <div class="form-group">
-            {{ form_widget(registration_form.name, { 'attr': {'class': 'form-control form-control-lg rounded-0', 'placeholder':'Nombre'} }) }}
-            {% for errorItem in registration_form.name.vars.errors %}
+            <label for="fiscalAdressCompany">Direccion Fiscal</label>
+            {{ form_widget(editCompany_form.fiscalAddress, { 'attr': {'class': 'form-control form-control-lg rounded-0', 'name':'domicilio fiscal de la empresa', 'placeholder':'Domicilio Fiscal', 'id':'fiscalAdressCompany', 'value':fiscalAdressCompany} }) }}
+    {# {% for errorItem in editCompany_form.name.vars.errors %}
+        <span class="help-inline">{{ errorItem.message }}</span>
+    {% endfor %}#}
+</div>
+<div class="form-group">
+    <label for="emailCompany">Email</label>
+    {{ form_widget(editCompany_form.email, { 'attr': {'class': 'form-control form-control-lg rounded-0', 'name':'email de la empresa', 'placeholder':'Email Company', 'id':'emailCompany', 'value':emailCompany} }) }}
+    {# {% for errorItem in editCompany_form.plainPassword.vars.errors %}
+        <span class="help-inline">{{ errorItem.message }}</span>
+    {% endfor %}#}
+</div>
+        <div class="form-group">
+            <label for="nifCompany">NIF</label>
+            {{ form_widget(editCompany_form.NIF, { 'attr': {'class': 'form-control form-control-lg rounded-0', 'name':'NIF de la empresa', 'id':'nifCompany', 'placeholder':'NIF', 'value':nifCompany} }) }}
+            {# {% for errorItem in editCompany_form.plainPassword.vars.errors %}
                 <span class="help-inline">{{ errorItem.message }}</span>
-            {% endfor %}
+            {% endfor %}#}
         </div>
-        <div class="form-group">
-            {{ form_widget(registration_form.plainPassword, { 'attr': {'class': 'form-control form-control-lg rounded-0', 'placeholder':'Password'} }) }}
-            {% for errorItem in registration_form.plainPassword.vars.errors %}
-                <span class="help-inline">{{ errorItem.message }}</span>
-            {% endfor %}
-        </div>
-        <div class="form-group">
-            <div class="form-check">
-                {{ form_widget(registration_form.agreeTerms, { 'attr': {'class': 'form-check-input'} }) }}
-                <label for="registration_form_agreeTerms" class="form-check-label required">Agree terms</label>
-                {% for errorItem in registration_form.agreeTerms.vars.errors %}
-                    <span class="help-inline">{{ errorItem.message }}</span>
-                {% endfor %}
-            </div>
-        </div>
-        <div class="form-actions">
-            <a class="btn btn-secundary" href="{{ relative_path('/login') }}">Back to login</a>
-            <button type="submit" id="register-submit-btn" class="btn btn-primary float-right">Registrarse</button>
-        </div>
-        {{ form_rest(registration_form) }}
-        {{ form_end(registration_form) }}
-    </div>
-
-
-    {#HASTA AQUI#}
+<div class="form-actions">
+    <a class="btn btn-secundary" href="{{ relative_path('/companies') }}">Back to Companies</a>
+    <button type="submit" id="register-submit-btn" class="btn btn-primary float-right">Actualizar Datos</button>
+</div>
+{{ form_rest(editCompany_form) }}
+{{ form_end(editCompany_form) }}
+</div>
+{#HASTA AQUI#}
 {% endblock %}
