--- a/templates/company/index.html.twig
+++ b/templates/company/index.html.twig
@@ -9,6 +9,7 @@
 
 {% block body %}
 
+
     <main>
 
         <header>
@@ -54,6 +55,24 @@
 </div>
 
 </section>
+        {#
+        <div role="dialog" tabindex="-1" class="modal fade" id="modal-avisolegal" style="max-width:600px;margin-right:auto;margin-left:auto;">
+   <div class="modal-dialog" role="document">
+     <div class="modal-content">
+       <div class="modal-header"> <!-- CABECERA -->
+       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+       <h4 class="text-center modal-title">Aviso Legal</h4>
+       </div>
+       <div class="modal-body"> <!-- CUERPO DEL MENSAJE -->
+       <p>TEXTO A MOSTRAR</p>
+       </div>
+       <div class="modal-footer"> <!-- PIE -->
+       <button class="btn btn-default btn btn-primary btn-lg" type="button" data-dismiss="modal">Cerrar </button>
+       </div>
+     </div>
+   </div>
+</div>
+#}
 
     </main>
 
