--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -7,11 +7,13 @@
         </div>
 
         <div class="nav-end">
+
             <div class="nav-items">
                 <ul>
                     <li id="menu-user-toggle"><a><img src="{{ asset('img/' ~ app.user.avatar) }}" alt="{{ app.user.name }}"/></a></li>
                 </ul>
             </div>
+            <a href="/logout" class="navbar-brand">Logout</a>
         </div>
     </nav>
 </header>
