--- a/templates/bill/index.html.twig
+++ b/templates/bill/index.html.twig
@@ -30,7 +30,7 @@
 
                     <button type="submit">Buscar</button>
 
-                    <a href="#"><button><i class="fas fa-plus"></i></button></a>
+                    <a href="{{ 'nuevaFactura' }}"><button><i class="fas fa-plus"></i></button></a>
                 </div>
                 <table class="table">
                     <thead>
