--- a/templates/menu-user.html.twig
+++ b/templates/menu-user.html.twig
@@ -8,7 +8,7 @@
             </a>
         </li>
         <li>
-            <a href="{{ path('profile') }}">
+            <a href="{{ path('perfil') }}">
                 <div class="nav-acount-img"><i class="fas fa-user-circle"></i></div>
                 <span>Mi Perfil</span>
             </a>
