--- a/templates/profile/profile.html.twig
+++ b/templates/profile/profile.html.twig
@@ -63,7 +63,7 @@
                                 </div>
                                 <div class="col-sm-12">
                                     <div class="form-actions">
-                                        {{ form_widget(profileForm.save, { 'attr': {'class': 'btn btn-primary float-left'}, 'value': 'Guardar' }) }}
+                                        {{ form_widget(profileForm.save, { 'attr': {'class': 'btn btn-primary float-left'} }) }}
                                     </div>
                                 </div>
                                 {{ form_rest(profileForm) }}
