--- a/templates/menu-company.html.twig
+++ b/templates/menu-company.html.twig
@@ -5,7 +5,7 @@
 
     <ul class="menu-company-elements">
         <li id="option-invoice">
-            <a href="{{ path('bills', {id:3}) }}"><span>Facturas</span> <i class="fas fa-file-invoice"></i></a>
+            <a href="{{ path('bills', {id:id_company}) }}"><span>Facturas</span> <i class="fas fa-file-invoice"></i></a>
         </li>
         <li id="option-clients">
             <a href="#"><span>Clientes</span> <i class="fas fa-users"></i></a>
