--- a/templates/company/showCompany.html.twig
+++ b/templates/company/showCompany.html.twig
@@ -9,11 +9,11 @@
 {% block body %}
 
     {% include 'header.html.twig' %}
-
-
+    {% include 'menu-user.html.twig' %}
+    
     <div class="container main-container">
         <div class="row">
-            <div class="panel panel-profile">
+            <div class="panel">
                 <div class="panel-heading">
                     <h2>MI EMPRESA</h2>
                 </div>
