--- a/templates/company/editCompany.html.twig
+++ b/templates/company/editCompany.html.twig
@@ -48,7 +48,7 @@
                             {% endfor %}#}
                         </div>
                         <div class="form-actions">
-                            <a class="btn btn-secundary" href="{{ relative_path('/companies') }}">Volver a Mis Empresas</a>
+                            <a class="btn btn-secundary" href="{{ relative_path('/companies') }}">Volver a Empresas</a>
                             <button type="submit" id="register-submit-btn" class="btn btn-primary float-right">Actualizar Datos</button>
                         </div>
                         {{ form_rest(editCompany_form) }}
