--- a/templates/company/showCompany.html.twig
+++ b/templates/company/showCompany.html.twig
@@ -46,7 +46,7 @@
                             </div>
                             <div class="col-sm-12">
                                 <div class="form-actions">
-                                    <a href="/companies" class="btn btn-primary float-center">Volver Empresas</a>
+                                    <a href="/companies" class="btn btn-primary float-center">Volver a Empresas</a>
                                 </div>
                             </div>
                         </div>
