estoy hasta la punta de minga

--- a/templates/bill/index.html.twig
+++ b/templates/bill/index.html.twig
@@ -28,7 +28,7 @@
                             </div>
                             <div class="panel-search">
                                 <form action="{{ path('searchDate', {id:id_company}) }}" method="POST" id="searchDate">
-                                    <input type="date" id="buscador"><button type="submit">Buscar</button>  
+                                    <input type="Date" id="buscador"><button type="submit">Buscar</button>  
                                 </form>
                                 
                                 <select>
